# VE482-p2-testcase

./: .gitattributes  .gitignore  README.md  generate_listen_query.py  gitea.sh  report.py  requirements.txt  run.sh  status.csv  test.py  time.csv
db/: fTable0.tbl  fTable1.tbl  fTable2.tbl  fTable3.tbl  fTable4.tbl  mTable0.tbl  mTable1.tbl  mTable10.tbl  mTable11.tbl  mTable12.tbl  mTable13.tbl  mTable14.tbl  mTable15.tbl  mTable16.tbl  mTable17.tbl  mTable18.tbl  mTable19.tbl  mTable2.tbl  mTable20.tbl  mTable21.tbl  mTable22.tbl  mTable23.tbl  mTable24.tbl  mTable25.tbl  mTable26.tbl  mTable27.tbl  mTable28.tbl  mTable29.tbl  mTable3.tbl  mTable30.tbl  mTable31.tbl  mTable32.tbl  mTable33.tbl  mTable34.tbl  mTable35.tbl  mTable36.tbl  mTable37.tbl  mTable38.tbl  mTable39.tbl  mTable4.tbl  (+19 more)
query/: few_insert_delete.query  few_read.query  few_read_dup.query  few_read_update.query  listen_read.query  many_insert_delete.query  many_read.query  many_read_dup.query  many_read_update.query  single_read.query  (+33 more)
src/: CMakeLists.txt  main.cpp
src/db/: Database.cpp  Database.h  Table.cpp  Table.h
src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryParser.cpp  QueryParser.h  QueryResult.h
src/query/data/: InsertQuery.cpp  InsertQuery.h  UpdateQuery.cpp  UpdateQuery.h
src/query/management/: DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  ListTableQuery.cpp  ListTableQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h
src/utils/: formatter.h  uexception.h
(+51 files in other folders)
